test/test-files/analyzer/foreach-loops/error-foreach-wrong-item-type/exception.out
Semantic error in : ./test-files/analyzer/foreach-loops/error-foreach-wrong-item-type/source.spice:3:13:
Wrong data type for operator: Foreach loop item type does not match array type. Expected int[], provided double

foreach double item : array {
        ^^^^^^^^^^^